--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,10 @@ build/
 
 # Ignore Gradle GUI config
 gradle-app.setting
+
+# Ignore Idea files
+.idea
+*.iml
+
+node_modules
+core/src/main/webapp/admin/components
