remove project rename, caused idea to misbehave

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,5 @@
 rootProject.name = 'gae-blog'
 
 include 'core'
-project(':core').name = 'gae-blog-core'
+//project(':core').name = 'gae-blog-core'
 
